# toguz-game

./: .gitignore  CMakeLists.txt  README.md  Toguz Algorithm.sln
Toguz Algorithm/: Toguz Algorithm.vcxproj  Toguz Algorithm.vcxproj.filters  main.cpp  packages.config
Toguz Algorithm/include/: Application.h  Board.h  Button.h  ClickRect.h  DialogueBox.h  DialogueCloseButton.h  DragBar.h  GameFinishBox.h  GameObject.h  GameState.h  HasText.h  HoleButton.h  Identifiers.h  Kazan.h  MenuState.h  NoText.h  ObjectManager.h  State.h  StateButton.h  StateManager.h  TextBehavior.h  TuzSlot.h
Toguz Algorithm/src/: Application.cpp  Board.cpp  Button.cpp  ClickRect.cpp  DialogueBox.cpp  DialogueCloseButton.cpp  DragBar.cpp  GameFinishBox.cpp  GameObject.cpp  GameState.cpp  HasText.cpp  HoleButton.cpp  Kazan.cpp  MenuState.cpp  NoText.cpp  ObjectManager.cpp  State.cpp  StateButton.cpp  StateManager.cpp  TextBehavior.cpp  TuzSlot.cpp
